# coallocation-slurm-plugin

./: LICENSE.slurm  Makefile.am  README.md  Vagrantfile  bootstrap.sh  configure.ac  job_submit_all_partitions.c  munge.key  rc.local  rc.local-controller  rc.local-cotroller  sample_job.sh  scrip.sh  slurm.conf  slurm.submit
ocfs2_configs/: cluster.conf  o2cb
storage_aware/: Makefile.am  Makefile.in  job_submit_storage_aware.c
